Updated the DS tasks to remove the older upgrade scheme.  It is untested and also needs to have handlers created for start/stop

--- a/projects/splunk/roles/collectd_client/handlers/main.yml
+++ b/projects/splunk/roles/collectd_client/handlers/main.yml
@@ -11,12 +11,14 @@
 
 - name: Reload systemd
   systemd: daemon_reload=yes
+  become: yes
 
 - name: Enable collectd
   systemd:
     name: collectd
     enabled: yes
     masked: no
+  become: yes
 
 - name: Start collectd
   systemd:
