More updates to remove upgrades from most roles aside from enterprise and uf

--- a/projects/splunk/roles/cm/tasks/main.yml
+++ b/projects/splunk/roles/cm/tasks/main.yml
@@ -143,8 +143,5 @@
   setup: filter=ansible_local
   become: yes
 
-- import_tasks: upgrade.yml
-  when: ( splunk_version > ansible_local.splunk.cm.version )
-
-- import_tasks: multisite.yml
+- include_tasks: multisite.yml
   when: ( splunk_idx_clustering_multisite == true )
