--- a/projects/splunk/roles/sh/tasks/main.yml
+++ b/projects/splunk/roles/sh/tasks/main.yml
@@ -58,10 +58,6 @@
   setup: filter=ansible_local
   become: yes
 
-- include: upgrade.yml
-  when: ( splunk_version > ansible_local.splunk.sh.version )
-  become: yes
-
 - name: Add search peers
   command: "{{ splunk_home }}/bin/splunk add search-server https://{{ hostvars[item].ec2_private_dns_name }}:8089 -auth admin:{{ splunk_admin_pass }} -remoteUsername admin -remotePassword {{ splunk_admin_pass }}"
   with_items:
@@ -73,11 +69,11 @@
   when: ( splunk_idx_clustering != true )
   changed_when: false
 
-- include: idx_clustering.yml
+- include_tasks: idx_clustering.yml
   when: ( splunk_idx_clustering == true )
   become: yes
 
-- include: multisite.yml
+- include_tasks: multisite.yml
   when: ( splunk_idx_clustering_multisite == true )
   become: yes
 
