--- a/projects/splunk/roles/uf/tasks/main.yml
+++ b/projects/splunk/roles/uf/tasks/main.yml
@@ -15,7 +15,7 @@
   ignore_errors: True
   become: true
 
-- include: install.yml
+- include_tasks: install.yml
   when: ( st.stat.isdir is not defined or ftr.stat.islnk is defined )
 
 - name: Ensure SPLUNK_OS_USER is set
@@ -88,9 +88,4 @@
 - name: re-read facts after adding custom fact
   setup: filter=ansible_local
   become: yes
-
-- include: upgrade.yml
-  when: ( splunkforwarder_version > ansible_local.splunk.uf.version )
-  
-
 
